2006-05-01  Christian Persch  <chpe@cvs.gnome.org>

	* doc/reference/tmpl/gnome-program.sgml: Fix goption example.
	  Bug #339463, patch by Kristof Vansant.

2006-04-19  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-help.c: Add Since: entries to some API docs
	* libgnome/gnome-program.c: Same
	* libgnome/gnome-url.c: Same

2006-04-18  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: New handling of ALL_LINGUAS
	* po/LINGUAS: Same. Closes bug #338549. Patch from
	Przemysław Grzegorczyk.

2006-04-18  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Remove obsolete entry for no_NO
	* po/no.po: And the translation.

========================== 2.14.1 ===========================

2006-04-04  Christian Persch  <chpe@cvs.gnome.org>

	* libgnome/gnome-help.c: (gnome_help_display_with_doc_id_and_env):
	  Plug potential mem leak introduced by my previous patch.

2006-04-04  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-exec.c: (gnome_prepend_terminal_to_vector):
	Fix compiler warnings from previous patch.
	* libgnome/gnome-program.c: (gnome_program_locate_file): Remove
	unused variable.

2006-04-04  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Add --enable-esd switch. Patch from
	Leonardo Boshell. Closes bug #310972.

2006-04-04  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-exec.c: (gnome_prepend_terminal_to_vector):
	Fix for 'run in terminal' launchers with gnome-terminal as
	the preferred terminal. Patch from Vincent Vuntz. Closes
	bug #336542.

2006-04-04  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-init.c: (libgnome_option_cb): Fix
	--espeaker option. Closes bug #333932. Patch from 
	Michael H. Schimek.

2006-04-04  Kjartan Maraas <kmaraas@gnome.org>

	* libgnome/gnome-help.c: (gnome_help_display_with_doc_id_and_env):
	* libgnome/gnome-program.c: (gnome_program_locate_file):
	Fix gnome_help_display_with_doc_id() to behave as documented.
	Patch from Stefan Kost and Christian Persch. Closes bug #333943.
