@@ -8,7 +8,7 @@ AC_PREREQ(2.54)
 # set LIBGNOME_BINARY_AGE and LIBGNOME_INTERFACE_AGE to 0.
 #
 m4_define([libgnome_major_version], [2])
-m4_define([libgnome_minor_version], [14])
+m4_define([libgnome_minor_version], [15])
 m4_define([libgnome_micro_version], [1])
 m4_define([libgnome_interface_age], [0])
 # If you need a modifier for the version number. 
