@@ -1,3 +1,10 @@
+2006-05-09  Benoît Dejean  <benoit@placenet.org>
+
+	* configure.in: Bumped version number to 2.15.1.
+
+	* libgnome/gnome-util.c: (gnome_util_user_shell): More const data.
+	Closes #339672.
+
 2006-05-01  Christian Persch  <chpe@cvs.gnome.org>
 
 	* doc/reference/tmpl/gnome-program.sgml: Fix goption example.
